Use concurrent mark and sweep